@@ -1,6 +1,7 @@
 Version 3.1.2 To be released
 ============================
 BUG: Ticket#719 - TAutoCompleter should not trigger Validation if CausesValidation=False (Christophe)
+BUG: Ticket#744 - Callback error handling is improved (Qiang)
 BUG: Ticket#750 - The "expire" parameter is used inconsistently in cache modules (Qiang)
 BUG: Fixed a bug in TPropertyValue::ensureArray() (Qiang)
 CHG: Changed TConditional so that the controls in its template behave like they are in its parent (Qiang)
